add navbar to layout.html

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="text-center text-dark">
-
+        
+        {% include "includes/nav.html" %}
         {% block content %}
     
         {% endblock %}
