--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -3,6 +3,7 @@
 
         <!-- From bootstrap example page -->
         <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#"> <img src=" {{ url_for('static',filename='images/logo.jpg') }} "></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fa fa-bars"></i>
               <!-- <span class="navbar-toggler-icon"></span> -->
