include footer in layout

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <div class="text-center text-dark">
-        
+
         {% include "includes/nav.html" %}
         {% block content %}
     
         {% endblock %}
+        {% include "includes/footer.html" %}
     
     </div>
 
