--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -1,21 +1,13 @@
-<div class="header">
-    <div class="menu-bar">
-
-        <!-- From bootstrap example page -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"> <img src=" {{ url_for('static',filename='images/logo.jpg') }} "></a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <i class="fa fa-bars"></i>
-              <!-- <span class="navbar-toggler-icon"></span> -->
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('index') }}"><span class="{% if navindex %}activate{% endif %}">Home</span></a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"> <img src=" {{ url_for('static',filename='images/logo.jpg') }} ">Movie Recommendation</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}"><span class="{% if navindex %}activate{% endif %}">Home</span></a>
+      </div>
     </div>
-</div>
+  </div>
+</nav>
