add reviews page shortcut into navbar

--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -9,6 +9,7 @@
         <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}"><span class="{% if navindex %}activate{% endif %}">Home</span></a>
         <a class="nav-link" href="{{ url_for('catalog') }}"><span class="{% if navcatalog %}activate{% endif %}">Catalog</span></a>
         <a class="nav-link" href="{{ url_for('recommend') }}"><span class="{% if navrecommend %}activate{% endif %}">Recommend</span></a>
+        <a class="nav-link" href="{{ url_for('reviews') }}"><span class="{% if navreviews %}activate{% endif %}">Reviews</span></a>
       </div>
     </div>
   </div>
