add login page shortcut into navbar

--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -10,6 +10,7 @@
         <a class="nav-link" href="{{ url_for('catalog') }}"><span class="{% if navcatalog %}activate{% endif %}">Catalog</span></a>
         <a class="nav-link" href="{{ url_for('recommend') }}"><span class="{% if navrecommend %}activate{% endif %}">Recommend</span></a>
         <a class="nav-link" href="{{ url_for('reviews') }}"><span class="{% if navreviews %}activate{% endif %}">Reviews</span></a>
+        <a class="nav-link" href="{{ url_for('login') }}"><span class="{% if navlogin %}activate{% endif %}">Login</span></a>
       </div>
     </div>
   </div>
