add about shortcut into navbar

--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -1,16 +1,24 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg "style="background-color: #712cf9;"data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"> <img src=" {{ url_for('static',filename='images/logo.jpg') }} "style="width: 20%; border-radius: 50%;"> Movie Recommendation</a>
+    <a class="navbar-brand" href="#"> <img src=" {{ url_for('static',filename='images/logo.jpg') }} "style="width: 15%; border-radius: 50%;"> Movie Recommendation</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}"><span class="{% if navindex %}activate{% endif %}">Home</span></a>
-        <a class="nav-link" href="{{ url_for('catalog') }}"><span class="{% if navcatalog %}activate{% endif %}">Catalog</span></a>
-        <a class="nav-link" href="{{ url_for('recommend') }}"><span class="{% if navrecommend %}activate{% endif %}">Recommend</span></a>
-        <a class="nav-link" href="{{ url_for('reviews') }}"><span class="{% if navreviews %}activate{% endif %}">Reviews</span></a>
-        <a class="nav-link" href="{{ url_for('login') }}"><span class="{% if navlogin %}activate{% endif %}">Login</span></a>
+
+        <a class="nav-link " href="{{ url_for('index') }}"><span class="{% if navindex %}activate{% endif %}">Home</span></a>
+
+        <a class="nav-link " href="{{ url_for('catalog') }}"><span class="{% if navcatalog %}activate{% endif %}">Catalog</span></a>
+
+        <a class="nav-link " href="{{ url_for('recommend') }}"><span class="{% if navrecommend %}activate{% endif %}">Recommend</span></a>
+
+        <a class="nav-link " href="{{ url_for('reviews') }}"><span class="{% if navreviews %}activate{% endif %}">Reviews</span></a>
+
+        <a class="nav-link " href="{{ url_for('about') }}"><span class="{% if navabout %}activate{% endif %}">About</span></a>
+
+        <a class="nav-link " href="{{ url_for('login') }}"><span class="{% if navlogin %}activate{% endif %}">Login</span></a>
+
       </div>
     </div>
   </div>
