create recommend movie table

--- a/application/templates/recommend.html
+++ b/application/templates/recommend.html
@@ -3,9 +3,30 @@
 {% block content %}
     <div class="row">
         <div class="col-md-12 text-center">
-            <br/><br/>
-            <h1>Coming soon</h1>
-            <br7>
+            <br/><h1>Movies chosen for you</h1><br/>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <table id="movietable" class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Movie Title</th>
+                        <th>Predicted Rating</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {% for p in predictions %}
+                    <tr>
+                        <td> {{ p["Name"] }} </td>
+                        <td> {{ p["Predicted_Rating"] }} </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-2"></div>
     </div>
 {% endblock %}
