--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -1,11 +1,26 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <br/><br/>
-            <h1>Coming soon</h1>
-            <br7>
+    <div class="container" style="margin-top:10px">
+        <div class="col-md-4 offset-md-4" >
+            <div class=" col-md-center">
+                <br/><br/>
+                    <form action="/login" method="POST" autocomplete="off">
+                        <h1 class="page-header text-primary">Login</h1>
+                        <div class="form-group">
+                            <labe>Username</labe>
+                            <input type="text" name="name" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <labe>Password</labe>
+                            <input type="password" name="password" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Login" class="btn btn-success btn-block">
+                        </div>
+                    </form>
+                <br7>
+            </div>
         </div>
     </div>
 {% endblock %}
