--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -2,26 +2,27 @@
 
 {% block content %}
 
-<div class="container" style="margin-top:10px">
-    <div class="col-md-4 offset-md-4">
-        <form method="POST" action="/register">
-            <h1 class="page-header text-primary text-center">Registration</h1>
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" class="form-control" name="name" required>
+<div class="container" style="margin-top:100px">
+    <div class="col-md-offset-1 col-md-10" >
+        <div class="col-md-offset-3 col-md-5" >
+            <div class="shadow">        
+                <form method="POST" action="/register">
+                    <h1 class="page-header text-primary text-center">Registration</h1>
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" class="form-control" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label>E-mail</label>
+                        <input type="email" class="form-control" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-success btn-block" value="Register">
+                        <a href="{{url_for('index')}}" class="btn btn-primary btn-block">Back to Home</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label>E-mail</label>
-                <input type="email" class="form-control" name="email" required>
-            </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" class="form-control" name="password" required>
-            </div>
-            <div class="form-group">
-                <input type="submit" class="btn btn-success btn-block" value="Register">
-            </div>
-        </form>
+        </div>    
     </div>
 </div>
 
