--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -1,23 +1,36 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="container" style="margin-top:10px">
-        <div class="col-md-4 offset-md-4" >
-            <form action="/login" method="POST" autocomplete="off">
-                <h1 class="page-header text-primary">Login</h1>
-                <div class="form-group">
-                    <labe>Username</labe>
-                    <input type="text" name="name" class="form-control" required>
+    <div class="container" style="margin-top:100px">
+        <div class="col-md-offset-1 col-md-10" >
+            <div class="col-md-offset-3 col-md-5 center-form" >
+                <div class="shadow">
+                    <form action="/login" method="POST" autocomplete="off">
+                        <h1 class="page-header text-primary">Login</h1>
+
+                        {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category,message in messages %}
+                            <div class="alert alert-{{category}}">{{message}}</div>
+                        {% endfor %}
+                    {% endif %}
+                    {% endwith %}
+
+                        <div class="form-group">
+                            <labe>Username</labe>
+                            <input type="text" name="name" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <labe>Password</labe>
+                            <input type="password" name="password" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Login" class="btn btn-success btn-block">
+                            <a href="{{url_for('register')}}" class="btn btn-primary btn-block">Register</a>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <labe>Password</labe>
-                    <input type="password" name="password" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Login" class="btn btn-success btn-block">
-                    <a href="{{url_for('register')}}" class="btn btn-primary btn-block">Register</a>
-                </div>
-            </form>
+            </div>    
         </div>
     </div>
 {% endblock %}
