create about page

--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -1,11 +1,20 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <br/><br/>
-            <h1>Coming soon</h1>
-            <br7>
+        <div class="about-section">
+            <div class="inner-container">
+                <h1>About Me</h1>
+                <p class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores quas 
+                    magni totam rerum iste, repudiandae accusantium 
+                    consequuntur tempore ratione, nulla, aliquid 
+                    necessitatibus voluptatibus maxime sequi consectetur 
+                    ipsam quos rem veniam?
+                </p>
+                <div class="contact">
+                    <span>NUTTASIT TINMAS 6610110096</span>
+                </div>
+            </div>
         </div>
-    </div>
+
 {% endblock %}
