--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -28,10 +28,10 @@
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-9">
             <div class="card registration-card shadow-sm">
                 <div class="card-body">
-                    <h1 class="page-header text-primary text-center">Registration</h1>
+                    <h1 class="page-header text-center">Registration</h1>
 
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
@@ -51,8 +51,8 @@
                             <input type="password" placeholder="Password" id="password" name="password" class="form-control" required>
                         </div>
                         <div class="d-grid gap-2">
-                            <input type="submit" value="Submit" class="btn btn-success">
-                            <a href="{{url_for('index')}}" class="btn btn-primary">Back to Home</a>
+                            <input type="submit" value="Submit" class="btn btn-sub">
+                            <a href="{{url_for('index')}}" class="btn btn-gr">Back to Home</a>
                         </div>
                     </form>
                 </div>
