--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -9,20 +9,16 @@
     <link href="https://fonts.cdnfonts.com/css/bebas-neue" rel="stylesheet">
     <link rel="stylesheet" href=" {{ url_for('static',filename='css/styles.css') }} "/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="text-center text-dark">
-
         {% include "includes/nav.html" %}
         {% block content %}
-    
         {% endblock %}
-        {% include "includes/footer.html" %}
-    
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 </html>
