decorate index page

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,22 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <br/><br/>
-            <h1>Welcome to the Movie Recommender System</h1>
-            <br7>
-        </div>
+
+<div class="text-center index-text">
+    <br>
+    <h1 class="index-texts">Web Movie Recommendation !</h1>
+    <br>
+    <div>
+        <a href="/login" class="btn btn-lg">Enter</a>
     </div>
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 text-center">
-            <h4><br/><br/><br/>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, quam.<br/><br/>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, possimus.<br/><br/>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, temporibus!<br/><br/>
-            </h4>
-        </div>
-        <div class="col-md-2"></div>
-    </div>
+</div>
 {% endblock %}
